...
        profileId.textColor = .userGray
        return profileId
    } ()
    private lazy var profileStatus: UILabel = {
        let profileStatus = UILabel()
        profileStatus.translatesAutoresizingMaskIntoConstraints = false
        profileStatus.text = "Hello, world!"
        profileStatus.font = UIFont(name: "YSDisplay-Medium", size: 13)
        profileStatus.textColor = .ypWhite
        return profileStatus
    } ()
    private var exitButton: UIButton = {
        let exitButton = UIButton(type: .system)
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        exitButton.setBackgroundImage(UIImage(systemName: "rectangle.portrait.and.arrow.right"), for: .normal)
        exitButton.accessibilityIdentifier = "ExitButton"
        exitButton.tintColor = .ypRed
        exitButton.addTarget(self, action: #selector(exitButtonTapped), for: .touchUpInside)
        return exitButton
    } ()
    
    private var profileImageServiceObserver: NSObjectProtocol?
...
