...
        }
    }
    
    //MARK: - IBOutlets
    @IBOutlet private var scrollView: UIScrollView!
    @IBOutlet weak var singleImageView: UIImageView!
    @IBOutlet weak var backButton: UIButton!
    @IBOutlet private weak var shareButton: UIButton! {
        didSet {
            shareButton.layer.cornerRadius = 0.5 * shareButton.layer.bounds.height
        }
    }
    
...
